
Version (CVS) 
-------------
JDO:   Switched the logging mechanism in Castor over to use Jakarta Commons
       Logging with Log4J as the default logging package. 
       (Bruce - 20031110) 

JDO:   Fixed bug 1391 using contribution from xgard@gmx.de.
       (Bruce - 20031110)

JDO:   Fixed bug 1452 as noted by Marc Guillemot[mguillemot@yahoo.fr]. 
       (Bruce - 20031110)

XML:   Add a new option in the CTF to allow dynamic configuration
       of the marshalling framework by using the java reflection.
       (Arnaud - 20031017)

XML:   Fix attribute processing when marshalling an AnyNode.
       Namespace handling was not enabled
       (Arnaud - 20031016)       

XML:   Enhance SAX2ANY to be compliant with the use of XML Reader.
       (Arnaud - 20031016)       

XML:   Improvements to the CTF (better error reporting)
       (Arnaud - 20031015)
   
XML:   Added the Source Generator command-line option 
       '-generateImportedSchemas' that lets you specify 
       the automatic generation of Java for imported XML Schemas.
       (Arnaud - 20031010)

Version 0.9.5.2, September 28, 2003
-----------------------------------

XML:   Some Unmarshalling performance improvements.
       (kvisco - 20030927)

XML:   Added SchemaReader#setErrorHandler method. Patch provided
       by Nick Betteridge.
       (kvisco - 20030925)

XML:   Updated to use XMLReader instead of SAX Parser by 
       default.
       (kvisco - 20030925)

XML:   Added direct support for SAX 2 ContentHandler in the
       UnmarshalHandler. 
       (kvisco - 20030925)

XML:   Added SimpleType#removeFacets method. Patch provided
       by Nick Betteridge.
       (kvisco - 20030925)

XML:   Fixed NullPointerException when trying to marshal a
       Vector as the root object.
       (kvisco - 20030923)

XML:   Fix for bug 1322, this is an improved patch for handling 
       primitives in the XMLFieldDescriptorImpl#canAccept method.
       Proposed patch from Alan Coleman.
       (kvisco - 20030923)
